--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ohm website</title>
+  <title>Borneo Anthro Hub</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
@@ -21,6 +21,59 @@
       min-width: 100vw;
       height: 100vh;
       flex-shrink: 0;
+    }
+
+
+
+     .description-section-container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); /* 2 per row */
+      gap: 20px; /* space between boxes */
+      max-width: 900px; /* optional, center content */
+      margin: 0 auto;
+    }
+
+    .description-box {
+      position: relative;
+      width: 100%;   /* take available space */
+      aspect-ratio: 16 / 9; /* keep consistent proportion */
+      background-image: url('https://via.placeholder.com/400x250');
+      background-size: cover;
+      background-position: center;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    .description-box .button-group {
+      position: absolute;
+      bottom: 15px;
+      right: 15px;
+      display: flex;
+      flex-direction: column; /* vertical stack */
+      gap: 10px;
+    }
+
+    .description-box .btn {
+      padding: 8px 16px;
+      background-color: rgba(0,0,0,0.6);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .description-box .btn:hover {
+      background-color: rgba(255,255,255,0.8);
+      color: black;
+    }
+
+    /* Responsive: On small screens show 1 per row */
+    @media (max-width: 768px) {
+      .description-section-container {
+        grid-template-columns: 1fr; /* single column */
+      }
     }
   </style>
 
@@ -63,36 +116,8 @@
 <body class="bg-gray-100 text-gray-800">
 
 
-  <!-- Responsive Navbar -->
-  <header class="flex items-center justify-center px-4 py-2 bg-white shadow">
-
-  
-    <!-- Dropdown Button -->
-    <div class="flex space-x-2">
-        <a href="index.html" class="text-black px-4 py-2 border-b-2 border-transparent hover:border-black">
-            Home
-          </a>
-    <div class="relative group">
-        <!-- Dropdown Button -->
-        <button class="text-black px-4 py-2 border-b-2 border-transparent hover:border-black transition duration-200">
-          Title ▼
-        </button>
-      
-        <!-- Dropdown Menu with fade-in -->
-        <div
-          class="absolute left-0 top-full opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-opacity duration-300 bg-white border border-gray-300 rounded shadow-md w-40 z-10"
-        >
-          <a href="" class="block px-4 py-2 hover:bg-gray-100 text-gray-700">Option A</a>
-          <a href="" class="block px-4 py-2 hover:bg-gray-100 text-gray-700">Option B</a>
-          <a href="" class="block px-4 py-2 hover:bg-gray-100 text-gray-700">Option C</a>
-          <a href="" class="block px-4 py-2 hover:bg-gray-100 text-gray-700">d</a>
-        </div>
-      </div>
-      <a href="Content.html" class="text-black px-4 py-2 border-b-2 border-transparent hover:border-black">
-        Content
-      </a>
-    </div>
-  </header>
+<div id="navbar"></div>
+<script src="navbar.js"></script>
 
 
 
@@ -137,7 +162,7 @@
 
     <!-- Image Left -->
     <div class="w-full md:w-1/2">
-      <img src="images/Sample Image/BAH Poster 2026_A6.png" alt="Intro" class="rounded-xl shadow-lg w-full h-auto object-cover" />
+      <img src="images/Sample_Image/BAH Poster 2026_A6.png" alt="Intro" class="rounded-xl shadow-lg w-full h-auto object-cover" />
     </div>
 
     <!-- Text Right -->
@@ -150,26 +175,29 @@
 
   </div>
 </section>
-   
+
+
+<!--
 <section class="Events w-full h-screen relative z-10">
   <div class="horizontal-panels">
     <div class="horizontal-panel bg-blue-500 flex flex-col items-center justify-center text-white px-4">
-      <img src="images/Sample Image/Committee Sticker-1.png" alt="Section 1 Image" class="w-32 h-32 mb-4" />
+      <img src="images/Sample_Image/Committee Sticker-1.png" alt="Section 1 Image" class="w-32 h-32 mb-4" />
       <h2 class="text-4xl font-bold mb-2">Blue Section</h2>
       <p class="text-lg">This is the first panel with a blue background.</p>
     </div>
     <div class="horizontal-panel bg-green-500 flex flex-col items-center justify-center text-white px-4">
-      <img src="images/Sample Image/Committee Sticker-2.png" alt="Section 2 Image" class="w-32 h-32 mb-4" />
+      <img src="images/Sample_Image/Committee Sticker-2.png" alt="Section 2 Image" class="w-32 h-32 mb-4" />
       <h2 class="text-4xl font-bold mb-2">Green Section</h2>
       <p class="text-lg">This is the second panel with a green background.</p>
     </div>
     <div class="horizontal-panel bg-yellow-400 flex flex-col items-center justify-center text-gray-900 px-4">
-      <img src="images/Sample Image/Committee Sticker-3.png" alt="Section 3 Image" class="w-32 h-32 mb-4" />
+      <img src="images/Sample_Image/Committee Sticker-3.png" alt="Section 3 Image" class="w-32 h-32 mb-4" />
       <h2 class="text-4xl font-bold mb-2">Yellow Section</h2>
       <p class="text-lg">This is the third panel with a yellow background.</p>
     </div>
   </div>
 </section>
+-->
 
 
 
@@ -241,31 +269,32 @@
 
       </div>
     </section>
-  
-    <!-- Footer -->
-    <footer class="bg-white text-gray-800 mt-4">
-      <div class="max-w-7xl mx-auto px-4 py-6 flex flex-col md:flex-row items-center justify-between space-y-4 md:space-y-0">
-        <!-- Footer Text -->
-        <p class="text-sm text-center md:text-left">
-          © 2025 Ohm Personal Website. All rights reserved.
-        </p>
-  
-        <!-- Social Media Icons -->
-        <div class="flex space-x-4">
-          <a href="https://facebook.com" target="_blank" aria-label="Facebook">
-            <img src="icons/facebook.svg" alt="Facebook" class="h-6 w-6 hover:opacity-80 transition" />
-          </a>
-          <a href="https://twitter.com" target="_blank" aria-label="Twitter">
-            <img src="icons/twitter.svg" alt="Twitter" class="h-6 w-6 hover:opacity-80 transition" />
-          </a>
-          <a href="https://instagram.com" target="_blank" aria-label="Instagram">
-            <img src="icons/instagram.svg" alt="Instagram" class="h-6 w-6 hover:opacity-80 transition" />
-          </a>
-        </div>
+
+
+  <div class="description-section-container">
+    <div class="description-box">
+      <div class="button-group">
+        <button class="btn">Box 1 - Btn 1</button>
+        <button class="btn">Box 1 - Btn 2</button>
+        <button class="btn">Box 1 - Btn 3</button>
       </div>
-    </footer>
-    
-  </div>
+    </div>
+
+    <div class="description-box">
+      <div class="button-group">
+        <button class="btn">Box 2 - Btn 1</button>
+        <button class="btn">Box 2 - Btn 2</button>
+        <button class="btn">Box 2 - Btn 3</button>
+      </div>
+    </div>
+
+
+
+
+
+
+    <div id="footer"></div>
+    <script src="footer.js"></script>
   
 <script>
   document.addEventListener("DOMContentLoaded", function () {
