--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
 
 
 
-     .description-section-container {
+      .description-section-container {
       display: grid;
       grid-template-columns: repeat(2, 1fr); /* 2 per row */
-      gap: 20px; /* space between boxes */
-      max-width: 900px; /* optional, center content */
+      gap: 20px;
+      max-width: 900px;
       margin: 0 auto;
     }
 
     .description-box {
       position: relative;
-      width: 100%;   /* take available space */
-      aspect-ratio: 16 / 9; /* keep consistent proportion */
+      width: 100%;
+      aspect-ratio: 16 / 9;
       background-image: url('https://via.placeholder.com/400x250');
       background-size: cover;
       background-position: center;
@@ -54,25 +54,46 @@
       gap: 10px;
     }
 
-    .description-box .btn {
-      padding: 8px 16px;
-      background-color: rgba(0,0,0,0.6);
-      color: white;
-      border: none;
-      border-radius: 6px;
+    .description-box .img-btn {
+      width: 60px;   /* size of button box */
+      height: 60px;
+      background-size: cover;
+      background-position: center;
+      border-radius: 8px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: transform 0.2s ease;
     }
 
-    .description-box .btn:hover {
-      background-color: rgba(255,255,255,0.8);
-      color: black;
+    /* Hover effect: scale + change image */
+    .description-box .img-btn:hover {
+      transform: scale(1.05);
     }
 
-    /* Responsive: On small screens show 1 per row */
+    .description-box .img-btn.btn1 {
+      background-image: url('https://via.placeholder.com/60/0000FF/FFFFFF?text=A');
+    }
+    .description-box .img-btn.btn1:hover {
+      background-image: url('https://via.placeholder.com/60/FF0000/FFFFFF?text=A');
+    }
+
+    .description-box .img-btn.btn2 {
+      background-image: url('https://via.placeholder.com/60/008000/FFFFFF?text=B');
+    }
+    .description-box .img-btn.btn2:hover {
+      background-image: url('https://via.placeholder.com/60/FFA500/FFFFFF?text=B');
+    }
+
+    .description-box .img-btn.btn3 {
+      background-image: url('https://via.placeholder.com/60/800080/FFFFFF?text=C');
+    }
+    .description-box .img-btn.btn3:hover {
+      background-image: url('https://via.placeholder.com/60/FFFF00/000000?text=C');
+    }
+
+    /* Responsive: 1 per row on small screens */
     @media (max-width: 768px) {
       .description-section-container {
-        grid-template-columns: 1fr; /* single column */
+        grid-template-columns: 1fr;
       }
     }
   </style>
@@ -133,7 +154,7 @@
       />
       
       <h2 class="absolute left-1/4 top-1/2 -translate-y-1/2 text-white text-4xl font-bold z-10">
-        Random some text here
+        Half Way Building
       </h2>
       
       <!-- Second text (slightly below the first) -->
@@ -143,14 +164,14 @@
 
     <!-- Hover Image Links (Right Side, Vertical Stack) -->
     <div class="absolute right-12 top-1/2 -translate-y-1/2 flex flex-col space-y-4 opacity-0 translate-x-10 group-hover:translate-x-0 group-hover:opacity-100 transition-all duration-500 ease-in-out z-10">
-      <a href="https://link1.com" target="_blank">
-        <img src="images/icons8-facebook-48.png" alt="Thumb 1" class="w-20 h-20 object-cover rounded-lg shadow-lg" />
+      <a href="https://www.facebook.com/profile.php?id=61568476775358" target="_blank">
+        <img src="images/facebook_2.png" alt="Thumb 1" class="w-20 h-20 object-cover rounded-lg shadow-lg" />
       </a>
-      <a href="https://link2.com" target="_blank">
-        <img src="images/icons8-linktree-48.png" alt="Thumb 2" class="w-20 h-20 object-cover rounded-lg shadow-lg" />
+      <a href="https://x.com/BorneoAnthroHub" target="_blank">
+        <img src="images/twitter.png" alt="Thumb 2" class="w-20 h-20 object-cover rounded-lg shadow-lg" />
       </a>
       <a href="https://link3.com" target="_blank">
-        <img src="images/icons8-x-48.png" alt="Thumb 3" class="w-20 h-20 object-cover rounded-lg shadow-lg" />
+        <img src="images/telegram.png" alt="Thumb 3" class="w-20 h-20 object-cover rounded-lg shadow-lg" />
       </a>
     </div>
 
@@ -200,93 +221,23 @@
 -->
 
 
-
-  <!-- Gallery -->
-<div class="flex flex-col min-h-screen relative z-0">
-  <section class="w-full py-12 bg-gray-800 text-white flex-grow">
-      <h2 class="text-3xl font-bold text-center mb-10">Gallery</h2>
-  
-      <div class="max-w-6xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6 px-4">
-        <!-- Panel 1 -->
-        <div class="relative group bg-white border border-gray-300 rounded-lg overflow-hidden shadow hover:shadow-lg transition transform hover:scale-105">
-          <img src="images/3 colour comm art by lokabrenna.jpg" alt="test 1" class="w-full h-96 object-cover brightness-75 group-hover:brightness-100 transition duration-300" />
-          <div class="absolute bottom-0 left-0 w-full p-2 text-white text-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition duration-300">
-            Artist: @
-          </div>
-        </div>
-  
-        <!-- Panel 2 -->
-        <div class="relative group bg-white border border-gray-300 rounded-lg overflow-hidden shadow hover:shadow-lg transition transform hover:scale-105">
-          <img src="images/Big size art by Bristle Thurder.png" alt="test 2" class="w-full h-96 object-cover brightness-75 group-hover:brightness-100 transition duration-300" />
-          <div class="absolute bottom-0 left-0 w-full p-2 text-white text-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition duration-300">
-            B
-          </div>
-        </div>
-  
-        <!-- Panel 3 -->
-        <div class="relative group bg-white border border-gray-300 rounded-lg overflow-hidden shadow hover:shadow-lg transition transform hover:scale-105">
-          <img src="images/skeb standee 2.png" alt="test 3" class="w-full h-96 object-cover brightness-75 group-hover:brightness-100 transition duration-300" />
-          <div class="absolute bottom-0 left-0 w-full p-2 text-white text-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition duration-300">
-            C
-          </div>
-        </div>
-  
-        <!-- Panel 4 -->
-        <div class="relative group bg-white border border-gray-300 rounded-lg overflow-hidden shadow hover:shadow-lg transition transform hover:scale-105">
-          <img src="images/Random comm art by wee ni low.jpg" alt="test 3" class="w-full h-96 object-cover brightness-75 group-hover:brightness-100 transition duration-300" />
-          <div class="absolute bottom-0 left-0 w-full p-2 text-white text-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition duration-300">
-            D
-          </div>
-        </div>
-
-        <div class="relative group bg-white border border-gray-300 rounded-lg overflow-hidden shadow hover:shadow-lg transition transform hover:scale-105">
-          <img src="images/Losing fight byMerdekyle.jpg" alt="test 3" class="w-full h-96 object-cover brightness-75 group-hover:brightness-100 transition duration-300" />
-          <div class="absolute bottom-0 left-0 w-full p-2 text-white text-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition duration-300">
-            D
-          </div>
-        </div>
-
-        <div class="relative group bg-white border border-gray-300 rounded-lg overflow-hidden shadow hover:shadow-lg transition transform hover:scale-105">
-          <img src="images/2989967-2.output.png" alt="test 3" class="w-full h-96 object-cover brightness-75 group-hover:brightness-100 transition duration-300" />
-          <div class="absolute bottom-0 left-0 w-full p-2 text-white text-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition duration-300">
-            D
-          </div>
-        </div>
-
-        <div class="relative group bg-white border border-gray-300 rounded-lg overflow-hidden shadow hover:shadow-lg transition transform hover:scale-105">
-          <img src="images/poker heart 10.png" alt="test 3" class="w-full h-96 object-cover brightness-75 group-hover:brightness-100 transition duration-300" />
-          <div class="absolute bottom-0 left-0 w-full p-2 text-white text-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition duration-300">
-            D
-          </div>
-        </div>
-
-        <div class="relative group bg-white border border-gray-300 rounded-lg overflow-hidden shadow hover:shadow-lg transition transform hover:scale-105">
-          <img src="images/IMG_0598.PNG" alt="test 3" class="w-full h-96 object-cover brightness-75 group-hover:brightness-100 transition duration-300" />
-          <div class="absolute bottom-0 left-0 w-full p-2 text-white text-center bg-black bg-opacity-50 opacity-0 group-hover:opacity-100 transition duration-300">
-            D
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-
   <div class="description-section-container">
     <div class="description-box">
       <div class="button-group">
-        <button class="btn">Box 1 - Btn 1</button>
-        <button class="btn">Box 1 - Btn 2</button>
-        <button class="btn">Box 1 - Btn 3</button>
+        <div class="img-btn btn1"></div>
+        <div class="img-btn btn2"></div>
+        <div class="img-btn btn3"></div>
       </div>
     </div>
 
     <div class="description-box">
       <div class="button-group">
-        <button class="btn">Box 2 - Btn 1</button>
-        <button class="btn">Box 2 - Btn 2</button>
-        <button class="btn">Box 2 - Btn 3</button>
+        <div class="img-btn btn1"></div>
+        <div class="img-btn btn2"></div>
+        <div class="img-btn btn3"></div>
       </div>
     </div>
+  </div>
 
 
 
