--- a/navbar.html
+++ b/navbar.html
@@ -15,7 +15,7 @@
 
   <!-- Logo (linked to homepage) -->
   <a href="index.html" class="flex items-center space-x-2">
-    <img src="images/logo.png" alt="Festival Logo" class="h-10 w-auto" />
+    <img src="images/BAH_Main_Logo.png" alt="Festival Logo" class="h-10 w-auto" />
   </a>
 
     <!-- Dropdown Button -->
