update link for navbar

--- a/3_Hotel_Info.html
+++ b/3_Hotel_Info.html
@@ -57,7 +57,7 @@
   <!-- SECTION 4: MAP & DIRECTIONS -->
   <section class="map-direction">
     <!-- Replace src with actual Google Maps embed link for Horizon Hotel -->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18..."></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.0899034858435!2d116.07267427498851!3d5.9823580940025645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x323b698fbf9444f3%3A0x915b80971570fd6!2sHorizon%20Hotel!5e0!3m2!1sen!2smy!4v1758556969301!5m2!1sen!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div class="directions">
       <h2>How to get here</h2>
       <p>Horizon Hotel is centrally located on Jalan Pantai in Kota Kinabalu. It’s around a 15-minute drive from Kota Kinabalu International Airport. Public buses to the airport run daily from roughly 7:30 PM nearby. :contentReference[oaicite:3]{index=3} Nearby landmarks within walking distance include Gaya Street, City Hall, movie theatres, malls, and local eateries.</p>
