--- a/navbar.html
+++ b/navbar.html
@@ -23,14 +23,14 @@
 
   <!-- Menu Items -->
   <nav id="menu" class="hidden flex-col md:flex md:flex-row md:space-x-6 absolute md:static top-full left-0 w-full md:w-auto bg-black bg-opacity-90 md:bg-transparent text-white p-4 md:p-0 font-bold">
-    <a href="index.html" class="px-4 py-2 border-b-2 border-transparent hover:border-white">Join the Festival!</a>
+    <a href="1_Ticket.html" class="px-4 py-2 border-b-2 border-transparent hover:border-white">Join the Festival!</a>
 
     <!-- Festival Info -->
     <div class="relative group">
       <button class="px-4 py-2 border-b-2 border-transparent hover:border-white">Festival Info ▼</button>
       <div class="absolute left-0 top-full opacity-0 invisible group-hover:opacity-100 group-hover:visible transition duration-300 bg-black bg-opacity-90 text-white rounded shadow-md w-40 z-10">
         <a href="" class="block px-4 py-2 hover:bg-gray-700">Activities</a>
-        <a href="" class="block px-4 py-2 hover:bg-gray-700">Venue</a>
+        <a href="3_Hotel_Info.html" class="block px-4 py-2 hover:bg-gray-700">Venue</a>
       </div>
     </div>
 
